# city_selector

./: README.md  city_select_app.ipynb  commune.db  config.yaml  get_data.py  pyproject.toml
data_collect/: __init__.py  database.py  infos.py  search_communes.py  tools.py
